<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="login_msg">By tapping \"Login\" above you are agreeing to the terms of </string>
    <string name="txt_login">Login</string>
    <string name="txt_update">Update</string>
    <string name="hint_user">username</string>
    <string name="hint_pass">password</string>
    <string name="my_settings">Settings</string>
     <string name="recharge">TopUp</string>
    <string name="hint_country">select country</string>
    <string name="account_settings">Account Settings</string>
    <string name="user_settings">User Settings</string>
    <string name="call_history">Call History</string>
    <string name="access_settings">Choose the country you are in</string>
      <string name="load_more">Loading more data</string>
    <string name="no_network">Network not found. Please check your internet setings.</string>
    <string name="admin_msg_url">http://api.mobisnow.com/mobisip.php</string>
    <string name="poweredby">Powered by: www.mobisnow.com</string>
    <string name="welco_api_lbl">A2Billing API URI</string>
    <string name="welco_example_text">/androida2billing/index.php</string>
    <string name="welco_uri_hint">e.g:1.2.3/customer</string>
    <string name="welco_next">Next</string>
    <string name="welco_instruction">INSTRUCTIONS : </string>
    <string name="welco_whats_new">What\'s New</string>
    <string name="welco_ins_txt">This version needs latest API. Download API from api.mobisnow.com and put it under a2billing customer folder on your server</string>
    <string name="welco_whatsnew_txt">-Mobisnow Dialer supports G729 Codec.\n- Improved GUI.\n- Minor Bug Fixes. </string>
    <string-array name="amount">
        <item>1 USD</item>
        <item>2 USD</item>
        <item>5 USD</item>
        <item>10 USD</item>
        <item>15 USD</item>
        <item>20 USD</item>
        <item>25 USD</item>
        <item>50 USD</item>
    </string-array>
    <string name="api_ins">This version needs latest API. Download API from api.mobisnow.com and put it under a2billing customer folder on your server</string>
    <string name="whatsnew">-A2Billing SIP Diale Dialer Dialer supports G729 Codec.\n- Improved GUI.\n- Minor Bug Fixes. </string>
    <string name="next">Next</string>
    <string name="init">Init…</string>
    <string name="unable_to_download_file">Unable to download file</string>
    <string name="connection_not_valid">Selected network route not allowed with current settings you have setup</string>
    <string name="invalid_sip_uri">Sip uri is invalid for call</string>
    <string name="accounts">Account</string>
    <string name="other_accounts">Other accounts</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="activate_account">Activate account</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="delete_account">Delete account</string>
    <string name="modify_account">Modify account</string>
    <string name="add_account">Add account</string>
    <string name="choose_wizard">Choose wizard</string>
    <string name="use">Use :</string>
    <string name="use_pstn">Use mobile</string>
    <string name="use_skype">Use Skype</string>
    <string name="ongoing_call">Call in Progress</string>
    <string name="missed_call">Missed call</string>
    <string name="recentCalls_empty">No Call Logs</string>
    <string name="filters">Filters</string>
    <string name="filters_desc">To apply when integration to Android is used</string>
    <string name="filters_for">Filters for</string>
    <string name="add_filter">Add filter / rewrite rule</string>
    <string name="delete_filter">Delete filter</string>
    <string name="callLog_delete_entry">Delete this call</string>
    <string name="callLog_delete_all">Delete all calls</string>
    <string name="callLog_delDialog_title">Delete Call Logs</string>
    <string name="callLog_delDialog_message">Are you sure you want to delete all calls from the log?</string>
    <string name="callLog_delDialog_yes">Yes</string>
    <string name="callLog_delDialog_no">No</string>
    <string name="gsm">Mobile</string>
    <string name="dial_tab_name_text">Dial</string>
    <string name="calllog_tab_name_text">CallLogs</string>
    <string name="messages_tab_name_text">Messages</string>
    <string name="menu_disconnect">	Exit</string>
    <string name="service_ticker_registered_text">SIP Registered</string>
    <string name="outgoing_call_chooser_call_text">Call</string>
    <string name="reorder">Reorder</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="record_logs">Record logs to send it to dev team and report a bug</string>
    <string name="send_logs">Stop recording logs (OPTIONALY send it)</string>
    <string name="view_existing_issues">Consult existing issues</string>
    <string name="ok">OK</string>
    <string name="misc">Misc</string>
    <string name="warning">WARNING</string>
    <string name="disconnect_and_incoming_explaination">You are configured to be available for this network !!! By clicking OK here you confirm that you don\'t want to be available until next start of the application</string>
    <string name="gadget_title">SIP Account switcher</string>
    <string name="pickup_sip_uri">Pickup SIP contact</string>
    <string name="display_icon_in_status_bar_desc">Should the application display an icon in the status bar when registered</string>
    <string name="display_icon_in_status_bar">Display icon in status bar</string>
    <string name="another_application_use_sip_port">Another application is currently using SIP port! Can\'t start !!!</string>
    <string name="choose_phone">Choose phone</string>
    <string name="no_phone_found">No phone found for this contact</string>
    <string name="show_password">Show password</string>
    <string name="this_codec_is_not_free">**This codec is not free !!!**\nPlease ensure that somebody (your SIP provider or yourself) have purchased a license that allow you to use this codec! We (as application distributors) are not responsible for an illegal use of this codec.\nIt\'s up to you to be sure that you are authorized to use this codec.\nPurchase link : </string>
    <string name="voice_mail">Voice mail</string>
    <string name="voice_mail_number">VM number</string>
    <string name="type_sip_uri_or_autocomplete">Sip uri or autocomplete</string>
    <string name="not_configured_multiple_calls">The application is not configured to allow multiple calls</string>
    <string name="legal_information">Legal information</string>
    <string name="update_nightly_build">Update nightly build</string>
    <string name="loading">Loading</string>
    <string name="reconnect">Reconnect</string>
    <string name="switch_to_text">Switch to text mode</string>
    <string name="switch_to_digit">Switch to digit mode</string>
    <string name="no_voice_mail_configured">No voicemail configured</string>
    <string name="no_accounts">No accounts</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="invert_selection">Invert selection</string>
    <string name="cant_write_file">Error writing file</string>
    <string name="info">Info</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="away">Away</string>
    <string name="busy">Busy</string>
    <string name="activate_presence_sharing">Share presence</string>
    <string name="deactivate_presence_sharing">Stop sharing presence</string>
    <string name="presence">Presence</string>
    <string name="set_android_group">Choose android group</string>
    <string name="uri_nbr">Phone number</string>
    <string name="uri_im">IM with custom SIP scheme</string>
    <string name="set_sip_data">Choose sip uri data</string>
    <string name="permdesc_configureSip">Usar sip</string>
    <string name="permlab_useSip">Usar sip</string>
    <string name="permdesc_useSip">Usar sip</string>
    <string name="permlab_configureSip">Usar sip</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string-array name="tunnel_mode_entries">
        <item>disabled</item>
        <item>3G only</item>
        <item>always</item>
        <item>auto</item>
    </string-array>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="not_ready_to_make_new_call">Not ready for a new call</string>
    <string name="bad_target_uri">Bad contact : %s</string>
    <string name="reset_sas_fmt">Reset verified %s</string>
    <string name="verify_sas_fmt">Verify %s</string>
    <string name="communication_encrypted">Encrypted</string>
    <string name="waiting_for_startup">Starting up&#8230;</string>
    <string name="couldnt_accept_call">An error occurred while accepting call</string>
    <string name="error_adding_new_call">Error adding new call</string>
    <string name="transfer_started">Transfer initiated</string>
    <string name="transfer_dialog_title">Transfer call to</string>
    <string name="transfer_to_new_call">New call</string>
    <string name="resume_dialog_title">Resume call</string>
    <string name="cannot_resume_paused_by_remote_call">Cannot resume call paused by remote</string>
    <string name="conf_show_details_text">Show details</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="close_button_text">Close</string>
    <string name="status_conf_call">conf</string>
    <string name="status_active_call">active</string>
    <string name="state_paused">paused</string>
    <string name="state_paused_by_remote">paused by remote</string>
    <string name="state_streams_running"></string>
    <string name="state_incoming_received">incoming</string>
    <string name="state_outgoing_ringing">ringing</string>
    <string name="state_outgoing_progress">calling</string>
    <string name="mutemic_button_txt">Mute</string>
    <string name="speaker_button_txt">Speaker</string>
    <string name="bluetooth_button_txt">Bluetooth</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="no_call_history">No call in your history.</string>
    <string name="no_missed_call_history">No missed call in your history.</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="content_description_pause"></string>
    <string name="content_description_hang_up"></string>
    <string name="content_description_numpad"></string>
    <string name="content_description_dialer"></string>
    <string name="content_description_switch_camera"></string>
    <string name="content_description_conference"></string>
    <string name="button_all_contacts">All Contacts</string>
    <string name="button_sip_contacts">Favorites</string>
    <string name="button_all_call">Recent Calls</string>
    <string name="button_delete_all">Clear</string>
    <string name="button_transfer">Transfer</string>
    <string name="button_add_call">Add call</string>
</resources>