<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/co_callback_nor"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:text="@string/account_settings" />

    <LinearLayout
        android:id="@+id/pan"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_settings"
            android:textColor="@color/co_policy"
            android:textSize="@dimen/large_text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shp_login_edt"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_user"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/user" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/login_btn_height"
                android:background="@color/co_login_btn" />

            <EditText
                android:id="@+id/idet"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/hint_user"
                android:paddingLeft="15dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/co_login_btn"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/normal_text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shp_login_edt"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_pass"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/password" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/login_btn_height"
                android:background="@color/co_login_btn" />

            <EditText
                android:id="@+id/passet"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/co_login_btn"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/normal_text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_settings"
            android:textColor="@color/co_policy"
            android:textSize="@dimen/large_text" />

        <LinearLayout
            android:id="@+id/ll_cntry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shp_login_edt"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/image_contry"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/united" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/login_btn_height"
                android:background="@color/co_login_btn" />

            <TextView
                android:id="@+id/sel_cntry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/triangle"
                android:gravity="center_vertical"
                android:hint="@string/hint_country"
                android:paddingLeft="10dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/co_login_btn" />

            <requestFocus />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_btn_height"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/sltr_login"
            android:text="@string/txt_update"
            android:textColor="@color/co_login_btn"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>