<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/org.linphone"
    android:background="@drawable/bg_menu">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
	
		<TableLayout 
	        android:id="@+id/calls"
	    	android:paddingTop="40dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top" />

        <fragment
            android:id="@+id/status"
            android:name="com.sim2dial.dialer.StatusFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/status" />
        
    </FrameLayout>

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_switch_camera"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:src="@drawable/switch_camera" />
    
    <com.sim2dial.dialer.ui.Numpad
        android:id="@+id/numpad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/switchCamera"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_menu"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >
            
            <TextView 
	           	android:layout_width="match_parent"
	           	android:layout_height="wrap_content"
	           	android:visibility="invisible"
                android:layout_weight="0.25"/>

	        <TextView
	           	android:id="@+id/transfer"
	           	android:background="@drawable/options_transfer"
	        	android:text="@string/button_transfer"
	        	android:gravity="center"
	        	android:paddingTop="40dp"
	        	android:textColor="@drawable/text_incall_button_color"
        		android:visibility="invisible"
	           	android:layout_width="match_parent"
	           	android:layout_height="wrap_content"
                android:layout_weight="0.75" />
	       
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >
            
            <TextView 
	           	android:layout_width="match_parent"
	           	android:layout_height="wrap_content"
	           	android:visibility="invisible"
                android:layout_weight="0.25"/>
            
	        <TextView
				android:id="@+id/addCall"
	       		android:background="@drawable/options_add_call_alt"
	        	android:text="@string/button_add_call"
	        	android:gravity="center"
	        	
	        	android:textColor="@drawable/text_incall_button_color"
        		android:visibility="invisible"
	           	android:layout_width="match_parent"
	           	android:layout_height="wrap_content"
                android:layout_weight="0.75" />
	       
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_menu">
	        
           <ImageView
	            android:id="@+id/pause"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
	            android:contentDescription="@string/content_description_dialer"
	            android:src="@drawable/pause_off" />

            <ImageView
                android:id="@+id/micro"
                android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
	            android:contentDescription="@string/content_description_dialer"
	            android:src="@drawable/micro_on"/>

            <ImageView
                android:id="@+id/speaker"
                android:src="@drawable/speaker_off"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
	            android:contentDescription="@string/content_description_dialer" />

            <ImageView
                android:id="@+id/dialer"
                android:src="@drawable/dialer_alt"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
	            android:contentDescription="@string/content_description_dialer" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/pause1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_pause"
                android:scaleType="fitXY"
                android:src="@drawable/pause_off"
                android:visibility="gone" />
            
            <ImageView
                android:id="@+id/conference"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_conference"
                android:scaleType="fitXY"
                android:src="@drawable/conference" />

            <TextView
                android:id="@+id/hangUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_hang_up"
                android:scaleType="fitXY"
                android:gravity="center"
                android:textSize="20dp"
 				android:text="Hang Up"
 				android:textStyle="bold"
                android:background="@drawable/red_selected" />

            <ImageView
                android:id="@+id/dialer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_numpad"
                android:scaleType="fitXY"
                android:src="@drawable/dialer_alt"
                android:visibility="gone" />
            
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
