<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:background="@color/co_header_bg" >

        <!--
        <ImageView
            android:id="@+id/blank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/blank_"
            android:contentDescription="@string/content_description_delete"
            android:gravity="center"
            android:scaleType="centerCrop" />
        -->

        <TextView
            android:id="@+id/allCalls"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/button_all_call"
            android:textColor="@drawable/text_switch_button_color"
            android:textSize="@dimen/large_text" />

        <!--
             <TextView
            android:id="@+id/missedCalls"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
       
            android:gravity="center"
            android:text="@string/button_missed_call"
            android:textColor="@drawable/text_switch_button_color" />
        -->


        <!--
             <TextView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_edit"
            android:contentDescription="@string/content_description_edit"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_edit"
            android:textColor="@drawable/text_button" />
        -->

        <TextView
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/layout_padding"
            android:background="@null"
            android:gravity="center"
            android:text="@string/button_delete_all"
            android:textColor="@drawable/text_button"
            android:textSize="@dimen/large_text" />

        <!--
             <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_ok"
            android:contentDescription="@string/content_description_validate"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_ok"
            android:textColor="@drawable/text_button"
            android:visibility="gone" />
        -->
    </RelativeLayout>

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@color/transparent"
        android:divider="#EDEDED"
        android:dividerHeight="1px" />

    <TextView
        android:id="@+id/noCallHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_call_history"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@drawable/text_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noMissedCallHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_missed_call_history"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@drawable/text_color" />

</LinearLayout>